@@ -60,6 +60,11 @@ Bugzilla   : 12606
 Description: don't use GFP_* in generic Lustre code.
 Details    : Use cfs_alloc_* functions and CFS_* flags for code portability.
 
+Severity   : normal
+Bugzilla   : 12333
+Description: obdclass is limited by single OBD_ALLOC(idarray)
+Details    : replace OBD_ALLOC/OBD_FREE with OBD_VMALLOC/OBD_VFREE
+
 --------------------------------------------------------------------------------
 
 2007-07-30         Cluster File Systems, Inc. <info@clusterfs.com>
